--- a/Assets/UIDocuments/styles/style.uss
+++ b/Assets/UIDocuments/styles/style.uss
@@ -3,7 +3,7 @@
     padding-bottom: 1px;
 }
 
-.unity-base-field__label {
+.unity-label {
     padding-top: 1px;
     padding-bottom: 1px;
     margin-top: 1px;
@@ -18,4 +18,14 @@
 .unity-button.large {
     padding-bottom: 6px;
     padding-top: 6px;
+}
+
+.title {
+    padding-left: 1px;
+    padding-top: 2px;
+    margin-top: 0;
+    margin-left: 0;
+    padding-right: 1px;
+    margin-right: 0;
+    padding-bottom: 2px;
 }
